fix for video on safari, update env variable

--- a/app/styles/_app.scss
+++ b/app/styles/_app.scss
@@ -135,9 +135,10 @@ h2 {
           }
         }
         a.cap-btn {
-          align-self: end;
           position: absolute;
           bottom: 24px;
+          top: auto;
+          right: 10px;
           padding-bottom: 0.2rem;
           margin-bottom: 10px;
           border-radius: 6px;
@@ -362,6 +363,7 @@ h2 {
     z-index: -1;
     opacity: 0.6;
     mask-image: linear-gradient(to right, transparent, #000 70%);
+    pointer-events: none;
   }
   .bg-vid-fb {
     width: 45vw;
